-
Type:
Bug
-
Status: Closed
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 0.2
-
Fix Version/s: 0.9.2
-
Component/s: Compiler (General)
-
Labels:None
-
Patch Info:Patch Available
I had an enum with a value named "BLAH.SOMETHING", which the compiler happily consumed, outputting invalid Java code. Period should not be allowed in names like this.
- is duplicated by
-
THRIFT-2147 Thrift IDL grammar allows for dotted identifier names
-
- Closed
-
- is part of
-
THRIFT-942 Lint functionality
-
- Closed
-