THRIFT-667 Period should not be allowed in identifier names

Patch: Jens Geyer